<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/orange"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="12dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/titleBar"
            android:text="@string/profile_title"
            android:textSize="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1000sp"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:padding="50dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:src="@drawable/profile"
                            app:civ_border_color="#FFF"
                            app:civ_border_width="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.21"
                            app:layout_constraintStart_toEndOf="@+id/textView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.026" />

                        <TextView
                            android:id="@+id/fullname_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/font_poppins_bold"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:text="@string/profile_name"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/role_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/fullname_field"
                            android:layout_toRightOf="@+id/profile_image"
                            android:fontFamily="@font/poppins_light"
                            android:includeFontPadding="false"
                            android:text="@string/email_profile"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/touch_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/touch_me" />

                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/summary_title"
                    android:textColor="@color/light_orange"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/summary_desc"
                    android:textAlignment="center"
                    android:layout_marginBottom="100sp"
                    />
            </LinearLayout>
    </ScrollView>
</RelativeLayout>